fix horizontal scroll on mobile

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,8 +1,12 @@
+html {
+	overflow-x: hidden;
+}
 body {
 	color: $default-text;
 	background: $default-background;
 	font-size: 1.5em;
 	overflow-x: hidden;
+	max-width: 100%;
 	@include body-font;
 }
 
